Workaround for https://bugreports.qt.io/browse/QTBUG-62216

--- a/mkspecs/devices/linux-rasp-pi2-g++/qmake.conf
+++ b/mkspecs/devices/linux-rasp-pi2-g++/qmake.conf
@@ -2,7 +2,7 @@
 
 include(../common/linux_device_pre.conf)
 
-QMAKE_RPATHLINKDIR_POST += $$[QT_SYSROOT]/opt/vc/lib
+QMAKE_LFLAGS           += -Wl,-rpath-link,$$[QT_SYSROOT]/opt/vc/lib
 
 QMAKE_LIBDIR_OPENGL_ES2 = $$[QT_SYSROOT]/opt/vc/lib
 QMAKE_LIBDIR_EGL        = $$QMAKE_LIBDIR_OPENGL_ES2
@@ -14,8 +14,9 @@ QMAKE_INCDIR_EGL        = $$[QT_SYSROOT]/opt/vc/include \
 QMAKE_INCDIR_OPENGL_ES2 = $${QMAKE_INCDIR_EGL}
 QMAKE_INCDIR_OPENVG     = $${QMAKE_INCDIR_EGL}
 
-QMAKE_LIBS_EGL          = -lEGL -lGLESv2
-QMAKE_LIBS_OPENVG       = -lEGL -lOpenVG -lGLESv2
+QMAKE_LIBS_EGL          = -lbrcmEGL -lbrcmGLESv2
+QMAKE_LIBS_OPENGL_ES2   = -lbrcmEGL -lbrcmGLESv2
+QMAKE_LIBS_OPENVG       = -lbrcmEGL -lbrcmOpenVG -lbrcmGLESv2
 QMAKE_CFLAGS            += -march=armv7-a -marm -mthumb-interwork -mfpu=neon-vfpv4 -mtune=cortex-a7 -mabi=aapcs-linux
 QMAKE_CXXFLAGS          = $$QMAKE_CFLAGS
 
